added clients section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
       </section>
       <!-- Great Tea, Freshly section -->
-      <section class="my-24 gap-10 flex flex-col lg:flex-row">
+      <section class="my-24 gap-10 pl-5 flex flex-col lg:flex-row">
         <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
           <div
             class="rounded-xl h-32 bg-gradient-to-r from-red-100 to-orange-100"
@@ -184,6 +184,65 @@
             you use it.
           </p>
         </div>
+      </section>
+      <!-- Meet Our Super Clients -->
+      <section class="flex flex-col  lg:flex-row gap-12 my24 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-20">
+      
+          <div class=" flex items-center lg:pr-40">
+          <div class="space-y-5">
+            <h3 class="font-extrabold text-5xl text-[#F4F4F4]">
+              Meet Our Super <br />
+              Clients
+            </h3>
+            <p class="text-[#F4F4F4]">
+              There are many variations of passages of Lorem Ipsum available, but
+              the majority have suffered alteration in some form, by injected
+              humour, or randomised words which don't look even slightly
+              believable.
+            </p>
+            <button class="btn btn-primary border-0 font-bold text-transparent bg-clip-text bg-gradient-to-r from-[#FF8938] to-[#F00] ">Show All</button>
+          </div>
+        </div>
+      
+        <!-- review container -->
+      <div class="relative">
+        <!--next review 1 -->
+        <div class="relative opacity-50 mb-16 z-10 p-10 lg:w-[430px] rounded-lg bg-white">
+          <img class="absolute -top-5 -left-7 border-4 border-white rounded-full bg-white" src="./images/client.png" alt="">
+          <p class="py-5">
+            We are providing the best and suitable home insurance services for
+            the people who are interested to treatment
+          </p>
+          <h3 class="font-extrabold text-base">Ilham Yuda</h3>
+          <p class="font-light text-gray-600">Businessman</p>
+         <div class="flex justify-end">
+           <img src="./images/circles.png" alt=""></div>
+        </div>
+        <!-- corrent review 2 -->
+        <div class="absolute top-40 lg:-left-32 z-20 lg:w-[430px] p-10 rounded-lg bg-white">
+          <img class="absolute -top-5 -left-7 border-4 border-white rounded-full bg-white" src="./images/client.png" alt="">
+          <p class="py-5">
+            We are providing the best and suitable home insurance services for
+            the people who are interested to treatment
+          </p>
+          <h3 class="font-extrabold text-base">Ilham Yuda</h3>
+          <p class="font-light text-gray-600">Businessman</p>
+         <div class="flex justify-end">
+           <img src="./images/circles.png" alt=""></div>
+        </div>
+        <!--previuas review 3 -->
+        <div class="relative opacity-50 p-10 z-10 lg:w-[430px] rounded-lg bg-white">
+          <img class="absolute -top-5 -left-7 border-4 border-white rounded-full bg-white" src="./images/client.png" alt="">
+          <p class="py-5">
+            We are providing the best and suitable home insurance services for
+            the people who are interested to treatment
+          </p>
+          <h3 class="font-extrabold text-base">Ilham Yuda</h3>
+          <p class="font-light text-gray-600">Businessman</p>
+         <div class="flex justify-end">
+           <img src="./images/circles.png" alt=""></div>
+        </div>
+      </div>
       </section>
     </main>
     <footer></footer>
