added my footer

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   </head>
   <body class="font-manrope">
     <header class="container mx-auto">
-      <div class="hero min-h-screen bg-base-200">
-        <div class="hero-content flex-col lg:flex-row">
+      <div class="p-20  bg-base-200">
+        <div class="flex justify-between flex-col lg:flex-row items-center">
           <div>
             <h1 class="text-7xl font-extrabold">
               It's good <br />
@@ -55,12 +55,13 @@
               Tea and Botanical Solutions Supplier Give Optimum Satisfaction To
               Your Taste Buds.
             </p>
-            <button class="btn btn-primary bg-gradient-to-l">
+            <button class="btn btn-primary text-white border-0 bg-gradient-to-r from-[#FF8938] to-[#F00]">
               Explore More
+              <i class="fa-solid fa-arrow-trend-up" style="color: #ffffff;"></i>
             </button>
           </div>
           <div>
-            <img src="./images/banner.png" class="max-w-sm rounded-lg" />
+            <img src="./images/banner.png" class=" rounded-lg" />
             <!-- rating -->
             <div
               class="-mt-16 flex items-center gap-2 drop-shadow-lg bg-white p-5 w-60 rounded-lg"
@@ -202,7 +203,7 @@
               slightly believable.
             </p>
             <button
-              class="btn btn-primary border-0 font-bold text-transparent bg-clip-text bg-gradient-to-r from-[#FF8938] to-[#F00]"
+              class="btn btn-primary border-0 font-bold text-white bg-gradient-to-r from-[#FF8938] to-[#F00]"
             >
               Show All
             </button>
@@ -277,13 +278,15 @@
           the majority have suffered alteration in some form, by injected
           humour, or randomised words which don't look even slightly believable.
         </p>
-        <div class="flex flex-col  lg:flex-row justify-center gap-6">
+        <div class="flex flex-col lg:flex-row justify-center gap-6">
           <!-- card 1 -->
           <div class="card shadow-xl">
             <figure><img src="./images/news-1.png" alt="Shoes" /></figure>
             <div class="card-body">
-             <p class="text-sm text-gray-500">Feb 05, 2027</p>
-              <h2 class="font-extrabold text-lg">Collecting 8 points for discount</h2>
+              <p class="text-sm text-gray-500">Feb 05, 2027</p>
+              <h2 class="font-extrabold text-lg">
+                Collecting 8 points for discount
+              </h2>
               <p class="text-sm text-gray-500">
                 There are many variations of passages of Lorem Ipsum available.
               </p>
@@ -291,11 +294,13 @@
             </div>
           </div>
           <!-- card 2 -->
-          <div class="card  shadow-xl">
+          <div class="card shadow-xl">
             <figure><img src="./images/news-2.png" alt="Shoes" /></figure>
             <div class="card-body">
-             <p class="text-sm text-gray-500">Feb 05, 2027</p>
-              <h2 class="font-extrabold text-lg">Collecting 8 points for discount</h2>
+              <p class="text-sm text-gray-500">Feb 05, 2027</p>
+              <h2 class="font-extrabold text-lg">
+                Collecting 8 points for discount
+              </h2>
               <p class="text-sm text-gray-500">
                 There are many variations of passages of Lorem Ipsum available.
               </p>
@@ -303,11 +308,13 @@
             </div>
           </div>
           <!-- card 3 -->
-          <div class="card  shadow-xl">
+          <div class="card shadow-xl">
             <figure><img src="./images/news-3.png" alt="Shoes" /></figure>
             <div class="card-body">
-             <p class="text-sm text-gray-500">Feb 05, 2027</p>
-              <h2 class="font-extrabold text-lg">Collecting 8 points for discount</h2>
+              <p class="text-sm text-gray-500">Feb 05, 2027</p>
+              <h2 class="font-extrabold text-lg">
+                Collecting 8 points for discount
+              </h2>
               <p class="text-sm text-gray-500">
                 There are many variations of passages of Lorem Ipsum available.
               </p>
@@ -317,6 +324,65 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer
+      class="px-5 lg:px-40 py-10 bg-gradient-to-r from-[#FF89381A] to-[#FF00001A] p-10 text-base-content"
+    >
+      <div class="flex flex-col lg:flex-row justify-between my-24">
+        <img class="w-10" src="./images/cup.png" alt="" />
+        
+          <p><span class="pr-5"> Ready to get started?</span>
+          <button
+            class="btn btn-primary bg-gradient-to-r from-orange-400 to-red-500 text-white border-0"
+          >
+            Get Started
+          </button>
+       </p>
+      </div>
+      <div class="footer">
+        <div>
+          <span class="footer-title">Services</span>
+          <a class="link link-hover">Branding</a>
+          <a class="link link-hover">Design</a>
+          <a class="link link-hover">Marketing</a>
+          <a class="link link-hover">Advertisement</a>
+        </div>
+        <div>
+          <span class="footer-title">Company</span>
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </div>
+        <div>
+          <span class="footer-title">Legal</span>
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </div>
+        <div>
+          <span class="footer-title">Newsletter</span>
+          <div class="form-control w-80">
+            <label class="label">
+              <span class="label-text">Enter your email address</span>
+            </label>
+            <div class="relative">
+              <input
+                type="text"
+                placeholder="username@site.com"
+                class="border-b-2 py-4 border-gray-700 bg-transparent"
+              />
+              <button
+                class="btn btn-primary absolute  rounded-full bg-gradient-to-r from-orange-400 to-red-500 text-white border-0"
+              >
+              <i class="fa-solid fa-angle-right" style="color: #ffffff;"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center  mt-10">
+        <p class="font-medium text-sm text-gray-400">Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+      </div>
+    </footer>
   </body>
 </html>
